--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="cannot_connect_camera">无法连接相机，请在系统设置里修改权限</string>
     <string name="camera_disabled">相机不可用</string>
     
-    <string name="app_name">金山魔方-AR贴纸faceunity-Demo</string>
+    <string name="app_name">AR贴纸</string>
     <string name="hello_world">Hello world!</string>
     <string name="click_to_shoot">开始直播</string>
     <string name="beauty_switcher">美颜</string>
